# ai-rag

./: .env.example  .gitignore  LICENSE  README.md  prepare.py  pyproject.toml  query.py  shared.py
data/: source.md  source_en.md
