[project]
name = "ai-rag"
version = "0.1.0"
description = "A minimal two-step RAG demo with Chroma."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5,<2",
    "openai>=2.29.0,<3",
    "python-dotenv>=1.2.2,<2",
    "sentence-transformers>=5,<6",
]

[project.scripts]
rag-prepare = "prepare:main"
rag-query = "query:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["prepare", "query", "shared"]
